22.02.2006
Changes by Nuno Ramiro
	- Cleaned SDLEvent class a bit and documented it (doxygen).
	- Small changes under other files.
	- Fixed a small bug that would not allow you to walk.

21.02.2006
Changes by Nuno Ramiro
	- speech.mul; Cliloc.enu - Linux fix (upper case/lower case were not correct).

20.02.2006
Changes by Nuno Ramiro
	- Linux Makefile Fix

19.02.2006
Changes by SiENcE (Florian Fischer)
	granny_aos.xml
	- Male & Female Elf model added

	ModelsInfo.xml
	- Male & Female Elf Model definitions added

19.02.2006
Changes by Nuno Ramiro
	- Config.h/.cpp was not ISO, it is now.
	- Grannyfile.cpp was not ISo, it is now.
	- Small changes under loading.
	- New Solution for Visual 2005 (2003 is kept under other name)
	- Small change under CSL wasn't working with VS 2005
	- Fixes to compile under Linux

18.02.2006
Changes by Nuno Ramiro
	- Some changes to Game.cpp / Game.h.
	- Fixed some bugs with the other changes.

17.02.2006
Changes by Nuno Ramiro
	- Rebuilt Config class, it is now a static class with it's variables. (Should be faster and fixed also memory leaks)
	- Made sure Config class was beeing displayed properly under doxygen documentation.

16.02.2006
Changes by Nuno Ramiro
	- Reworking Config class (rebuilding it)

	--> Removed cal3d was doing nothing, if we need it later we will add.
	--> Added Doxygen.h.
	--> Removed Debug.h and Debug.cpp
	--> Created a new Logger.h and Logger.cpp (should be faster).

	UOMap.cpp
	- Removed #include <fstream>
	- Removed #include <stdlib.h>
	- Removed #include <cstring>
	- Removed #include "Debug.h"
	- Removed #include "iris_endian.h"
	- Removed #include <iostream>
	- Removed #include "loaders/MapInfo.h"
	- Removed #include "Exception.h"
	- Removed #include "Config.h"
	- Renamed mapstream, staticstream, staidxstream to m_...
	- Made m_mapstream, m_staticstream, m_staidxstream = NULL under destructor
	- Removed using namespace std;

	UOMap.h
	- Removed #include <windows.h>
	- Added #include "loaders/MapInfo.h"